*mozart-1.2.5-r2 (10 Apr 2003)

  10 Apr 2003; Denys Duchier (denys.duchier@loria.fr)
  also install mozart-ozmake