@@ -3,9 +3,9 @@ HOMEPAGE="http://www.mozart-oz.org/"
 KEYWORDS="x86 ppc sparc hppa"
 
 RDEPEND="$RDEPEND
-  dev-lang/mozart-base
-  dev-lang/mozart-stdlib
-  dev-lang/mozart-doc
-  dev-lang/mozart-ozmake
-  gtk? ( dev-lang/mozart-gtk )
+  =dev-lang/mozart-base-1.2.5-r3
+  =dev-lang/mozart-stdlib-1.2.5-r1
+  =dev-lang/mozart-doc-1.2.5-r1
+  =dev-lang/mozart-ozmake-0.82
+  gtk? ( =dev-lang/mozart-gtk-1.0-r1 )
 "
